force-app/main/default/objects/Menu_Item__c/Menu_Item__c.object-meta.xml
<CustomObject>
  <label>Menu Item</label>
  <pluralLabel>Menu Items</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Menu Item Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>