force-app/main/default/objects/Menu_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Appetizer</fullName><default>false</default></value>
            <value><fullName>Main Course</fullName><default>false</default></value>
            <value><fullName>Dessert</fullName><default>false</default></value>
            <value><fullName>Beverage</fullName><default>false</default></value>
            <value><fullName>Side</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>