force-app/main/default/objects/Menu_Item__c/fields/Is_Vegan__c.field-meta.xml
<CustomField>
    <fullName>Is_Vegan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Vegan</label>
    <type>Checkbox</type>
</CustomField>