force-app/main/default/objects/Menu_Item__c/fields/Spiciness_Level__c.field-meta.xml
<CustomField>
    <fullName>Spiciness_Level__c</fullName>
    <label>Spiciness Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mild</fullName>
                <default>true</default>
                <label>Mild</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Spicy</fullName>
            </value>
            <value>
                <fullName>Extra Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>