force-app/main/default/objects/Menu_Item__c/validationRules/Price_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Menu item price must be greater than zero.</description>
    <errorConditionFormula>OR(
    ISBLANK(Price__c),
    Price__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price must be greater than ₹0.</errorMessage>
</ValidationRule>